--- a/battleships.html
+++ b/battleships.html
@@ -32,3 +32,36 @@
     cursor: pointer;
     transition: background-color 0.3s;
   }
+.cell:hover {
+    background-color: #add8e6;
+  }
+  .hit {
+    background-color: #ff6347 !important;
+  }
+  .miss {
+    background-color: #ffffff !important;
+  }
+  .ship {
+    background-color: #808080;
+  }
+  h2 {
+    text-align: center;
+    color: #0077be;
+  }
+  #message {
+    text-align: center;
+    margin-top: 20px;
+    font-weight: bold;
+    color: #0077be;
+  }
+  #reset-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #0077be;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
